feat: update JVM to 25 and produce minimal Docker image